--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,12 @@ body {
     margin: 0px;
 }
 
+.nav-bar {
+    background: linear-gradient(-90deg, #84CF6A, #16C0B0);
+    height: 60px;
+    margin-bottom: 15px;
+}
+
 .product {
     display: flex;
     flex-flow: wrap;
@@ -27,35 +33,67 @@ img {
     width: 50%;
 }
 
-.color-selector {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .color-box {
     width: 40px;
     height: 40px;
-    margin: 5px;
-    border: 1px solid #d8d8d8;
-}
-
-.cart-actions {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 .cart {
-    margin-bottom: 10px;
+    margin-right: 25px;
+    float: right;
+    border: 1px solid #d8d8d8;
+    padding: 5px 20px;
 }
 
 button {
+    margin-top: 30px;
     border: none;
     background-color: #1E95EA;
     color: white;
     height: 40px;
     width: 100px;
     font-size: 14px;
-    margin: 5px 0;
+}
+
+.disabledButton {
+    background-color: #d8d8d8;
+}
+
+.review-form {
+    width: 400px;
+    padding: 20px;
+    margin: 40px;
+    border: 1px solid #d8d8d8;
+}
+
+input {
+    width: 100%;
+    height: 25px;
+    margin-bottom: 20px;
+}
+
+textarea {
+    width: 100%;
+    height: 60px;
+}
+
+.tab {
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.activeTab {
+    color: #16C0B0;
+    text-decoration: underline;
+}
+
+.disabledButton {
+    background-color: #d3d3d3;
+    cursor: not-allowed;
+    opacity: 0.7;
+  }
+
+.outOfStock {
+    text-decoration: line-through;
 }
